--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
+<html>
 <head>
-<script src="homework3.js"></script>
-
+	<title></title>
+	<script src="homework3.js">
+	</script>
+  
 </head>
+</html>
